@@ -169,6 +169,8 @@ public:
   void SetUpOutputOp(poptorch::TensorId id, std::int32_t *ptr,
                      const std::vector<std::int64_t> &dims);
 
+  void SetUpOutputOp(poptorch::TensorId id, bool *ptr,
+                     const std::vector<std::int64_t> &dims);
   void SetActiveIpu(std::uint64_t id);
 
   void InitSession(const Optimizer &opt);
